# ZeroVPN

./: .dockerignore  .editorconfig  .env.dev.example  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  clippy.toml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.mail.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  verify-real.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  images.yml
crates/zerovpn-api/: Cargo.toml
crates/zerovpn-api/src/: bootstrap.rs  error.rs  main.rs  middleware.rs  quota.rs  ratelimit.rs  state.rs
crates/zerovpn-api/src/extractors/: auth.rs  mod.rs
crates/zerovpn-api/src/routes/: admin.rs  api_tokens.rs  auth.rs  bandwidth.rs  connections.rs  devices.rs  dns.rs  dto.rs  email_auth.rs  health.rs  me.rs  metrics.rs  mod.rs  oauth.rs  openapi.rs  totp.rs  traffic_explorer.rs  webhooks.rs  ws.rs
crates/zerovpn-auth/: Cargo.toml
crates/zerovpn-auth/src/: api_token.rs  kek.rs  lib.rs  password.rs  totp.rs
crates/zerovpn-cli/: Cargo.toml
crates/zerovpn-cli/src/: main.rs
crates/zerovpn-core/: Cargo.toml
crates/zerovpn-core/src/: config.rs  error.rs  geo.rs  ids.rs  lib.rs  models.rs
crates/zerovpn-db/: Cargo.toml
crates/zerovpn-db/src/: lib.rs  pool.rs  webhook_dispatch.rs
crates/zerovpn-db/src/repos/: access_logs.rs  api_tokens.rs  audit.rs  bandwidth.rs  candles.rs  connection_sessions.rs  destination_ips.rs  devices.rs  failed_logins.rs  mod.rs  oauth_states.rs  peer_endpoint_history.rs  quota.rs  server_samples.rs  servers.rs  session_events.rs  topology_positions.rs  user_prefs.rs  user_sessions.rs  users.rs  verification_tokens.rs  webhooks.rs
crates/zerovpn-dns/: Cargo.toml
crates/zerovpn-dns/src/: lib.rs
crates/zerovpn-events/: Cargo.toml
crates/zerovpn-events/src/: lib.rs  publisher.rs  subscriber.rs
crates/zerovpn-mail/: Cargo.toml
crates/zerovpn-mail/src/: lib.rs  templates.rs  transport.rs
crates/zerovpn-mail/templates/: _components.html  admin_action.html  admin_action.txt  base.html  new_device.html  new_device.txt  password_reset.html  password_reset.txt  quota_warning.html  quota_warning.txt  suspicious_login.html  suspicious_login.txt  verify_email.html  verify_email.txt
crates/zerovpn-obfs/: Cargo.toml
crates/zerovpn-obfs/src/: lib.rs
crates/zerovpn-stats/: Cargo.toml
crates/zerovpn-stats/src/: aggregator.rs  lib.rs  poller.rs  retention.rs
crates/zerovpn-topology/: Cargo.toml
crates/zerovpn-topology/src/: lib.rs
crates/zerovpn-wg/: Cargo.toml
crates/zerovpn-wg/src/: config.rs  control.rs  ip_alloc.rs  keys.rs  lib.rs  pause.rs  qr.rs
crates/zerovpn-wire/: Cargo.toml
crates/zerovpn-wire/src/: lib.rs
crates/zerovpn-worker/: Cargo.toml
crates/zerovpn-worker/src/: aggregator.rs  destination_ingest.rs  dispatcher.rs  docker_stats.rs  main.rs  retention.rs  server_health.rs  stats_sim.rs  wg_poller.rs
deploy/: Caddyfile  Caddyfile.dev  Caddyfile.prod  Corefile  Dockerfile.api  Dockerfile.dev  Dockerfile.nflog-exporter  Dockerfile.web  Dockerfile.worker  dev-entrypoint-api.sh  loki-config.yml  nginx.conf  prometheus.yml  promtail-config.yml  traefik-dynamic.yml  ulogd.conf
docs/: API.md  STAGE_C_GEO_ENRICHMENT.md  STAGE_C_INGEST.md  app-connect-endpoint.md  architecture.md  index.html  runbook.md  site.css
migrations/: 00000000000001_initial.sql  00000000000002_revoked_devices_release_ip.sql  00000000000003_webhooks.sql  00000000000004_login_ip.sql  00000000000005_server_samples_unbounded_history.sql  00000000000006_topology_positions.sql  00000000000007_device_stored_private_key.sql  00000000000008_devices_display_order.sql  00000000000008_user_preferences.sql  00000000000009_drop_api_tokens.sql  00000000000010_drop_webhooks.sql  00000000000011_users_password_changed_at.sql  00000000000012_user_preferences.sql  00000000000013_notification_prefs.sql  00000000000014_full_logging_stage_a.sql  00000000000015_peer_endpoints.sql  00000000000016_audit_user_agent.sql  00000000000017_session_events.sql  00000000000018_connection_sessions.sql  00000000000019_access_logs.sql  00000000000020_rename_ip_columns.sql  00000000000021_destination_ips.sql  00000000000022_destination_ips_geo.sql  00000000000023_device_type.sql  00000000000024_bandwidth_candles.sql  00000000000025_device_lifetime_bytes.sql  00000000000026_device_quota.sql  00000000000027_user_month_baseline.sql  00000000000028_server_persistent_keepalive.sql  00000000000029_user_policy_hide_device_detail.sql  00000000000030_google_oauth.sql  00000000000031_user_theme_pref.sql  00000000000032_server_private_key.sql  00000000000033_user_sessions.sql  00000000000034_user_device_limit.sql
scripts/: dev-native.sh  init-secrets.sh  smoke-test.sh  test-stage-c.sh  ulogd-exporter.py
tests/: Cargo.toml  devices_repo.rs  users_repo.rs
web/: .npmrc  components.json  eslint.config.js  index.html  knip.jsonc  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/e2e/: preferences.spec.ts  smoke.spec.ts
web/public/: manifest.webmanifest  sw.js
web/src/: index.css  main.tsx  routes.tsx
web/src/components/: CommandPalette.tsx  ConfirmDialog.tsx  CopyButton.tsx  CopyableCode.tsx  DeviceCard.tsx  EmptyState.tsx  FilterDropdown.tsx  Identicon.tsx  MaintenanceBanner.tsx  PageHeader.tsx  Pagination.tsx  RelativeTime.tsx  RouteError.tsx  Stat.tsx  StatusPill.tsx  mode-toggle.tsx  motion.tsx  swiss.tsx  theme-provider.tsx
web/src/hooks/: use-mobile.ts  useBreadcrumbOverride.ts  useCandleSeries.ts  useDeviceDetailGated.ts  useDeviceOnline.ts  useHistoryHydration.ts  useIdleTimeout.ts  useLiveTotal.ts  useNow.ts  usePageVisible.ts  useResettingPage.ts  useWebSocket.ts
web/src/lib/: api.ts  auth-guard.tsx  clipboard.ts  datetime.ts  deviceIcons.ts  deviceState.ts  finder.ts  motion.ts  notify.ts  query.ts  radix.ts  registerSW.ts  units.ts  wire.ts
web/src/stores/: auth.ts  breadcrumb.ts  (+2 more)
(+73 files in other folders)
