[package]
name = "zerovpn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
ipnetwork = { workspace = true }
url = { workspace = true }
compact_str = { workspace = true }
# sqlx is added so we can derive Type on the domain enums and avoid a
# parallel set of DB-side wrapper enums. Compile-time-only impact; no
# runtime side effects on consumers that don't use it.
sqlx = { workspace = true }
# Derive ToSchema on the public domain types so the API crate can fold
# them straight into the OpenAPI document. Compile-time only.
utoipa = { workspace = true }

# GeoIP
maxminddb = { workspace = true }
serde_json = { workspace = true }
