[package]
name = "zerovpn-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zerovpn-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
ipnetwork = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
# Derive ToSchema on a handful of repo-level types that the OpenAPI
# document wants to fold in (user_prefs payloads, etc). Compile-time only.
utoipa = { workspace = true }
