[package]
name = "zerovpn-dns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zerovpn-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ipnetwork = { workspace = true }
once_cell = { workspace = true }
regex = "1.10"
