[package]
name = "zerovpn-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zerovpn-wire = { workspace = true }
zeromq = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
