[package]
name = "zerovpn-mail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zerovpn-core = { workspace = true }
lettre = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
