[package]
name = "zerovpn-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zerovpn-core = { workspace = true }
zerovpn-db = { workspace = true }
zerovpn-events = { workspace = true }
zerovpn-wire = { workspace = true }
zerovpn-wg = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
arraydeque = { workspace = true }
time = { workspace = true }
